crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_unqualified_link_no_fallback.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Caller

## Description

Uses `unknown_func`.
