crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_unqualified_link_with_fallback.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Caller

## Description

Uses [`unknown_func`](https://example.com/unknown_func.html).
