crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_url_autolink.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Refs

## Description

See <https://example.com> and [the site](https://example.com).
